welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:1: error: Missing closing brace `}' assumed here
var nbBiscuit:Int=0
^