welcome.lessons.welcome.variables.RunHalf.scala.code
var nbBiscuit:Int=0
var nbCaseOrange:Int=0
while (2*nbBiscuit < nbCaseorange+1){
  avance();
  if (estSurBiscuit()==true){
    nbBiscuit=nbBiscuit+1;
  if (estSurOrange()==true){
    nbCaseOrange=nbCaseorange+1;
   }
}